<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chip Counter</string>
    <string name="numChips">Number of Chips</string>
    <string name="calculate">Calculate</string>
    <string name="noChipsSet">Welcome to Chip Counter by Andy Barratt.\n\nFirst you need to set the values of the chips in your game.\n\nJust click below to do that now :)</string>
    <string name="setValues">Set Chip Values</string>
    <string name="websiteURL">www.andybarratt.co.uk</string>
    <string name="value">Value (e.g. 0.10)</string>
    <string name="saveValues">Save Values</string>
    <string name="total">Your Total</string>
    <string name="ok">OK</string>
    <string name="cardRankings">Poker Hand Rankings</string>
    
    <!-- Card Rankings -->
    <string name="royalFlush">Royal Flush</string>
    <string name="straightFlush">Straight Flush</string>
    <string name="fourOfAKind">Four of a Kind</string>
    <string name="fullHouse">Full House</string>
    <string name="flush">Flush</string>
    <string name="straight">Straight</string>
    <string name="threeOfAKind">Three of a Kind</string>
    <string name="twoPair">Two Pair</string>
    <string name="onePair">One Pair</string>
    <string name="highCards">High Cards</string>
</resources>
