<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    >
    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/app_name"
	    android:textColor="#ffffff"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:typeface="sans"
	    android:gravity="center_horizontal"
	    android:background="#990000"
	    android:padding="5sp"
	    android:layout_marginBottom="10sp"
	    />
	    
	<LinearLayout
		android:id="@+id/chips"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10sp">
			<ImageView
				android:layout_height="50sp"
				android:src="@drawable/white"
				android:layout_width="50sp">
			</ImageView>
			<EditText
				android:id="@+id/white"
				android:inputType="number"
				android:layout_width="fill_parent"
				android:layout_height="50sp"
				android:hint="@string/numChips" />
	</LinearLayout>
	
	<Button
		android:text="@string/calculate"
		android:id="@+id/btnCalculate"
		android:background="#990000"
		android:layout_width="fill_parent"
		android:textSize="20sp"
	    android:textStyle="bold"
	    android:typeface="sans"
	    android:textColor="#ffffff"
		android:layout_height="50sp"
		android:layout_margin="10sp">
	</Button>
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" 
	    android:text="@string/websiteURL"
	    android:textColor="#ffffff"
	    android:textSize="14sp"
	    android:typeface="sans"
	    android:padding="5sp"
	    android:gravity="center_horizontal|bottom"/>
	
	
    
    
    
      
</LinearLayout>
