<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">
    
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/app_name"
		    android:textColor="#ffffff"
		    android:textSize="20dp"
		    android:textStyle="bold"
		    android:typeface="sans"
		    android:gravity="center_horizontal"
		    android:background="@drawable/titlebackground"
		    android:padding="5dp"
		    android:layout_marginBottom="10dp" />
		    
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/royalFlush"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_10"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_j"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_q"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_k"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_a"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/straightFlush"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_6"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_8"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_9"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_10"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/fourOfAKind"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_4"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/fullHouse"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_6"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_6"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/flush"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_j"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_3"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_10"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/straight"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_3"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_5"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_6"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/threeOfAKind"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_6"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_k"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/twoPair"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_2"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/onePair"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_5"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_5"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_4"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_6"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/highCards"
			android:textColor="#ffffff"
			android:textSize="16dp"
			android:typeface="sans"
			android:layout_marginLeft="10dp" />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/diamond_k"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_10"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/heart_3"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/club_7"
					android:layout_weight="1">
				</ImageView>
				<ImageView
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:src="@drawable/spade_4"
					android:layout_weight="1">
				</ImageView>
		</LinearLayout>
	

		<Button  
		android:id="@+id/btnWebsite"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/websiteURL"
	    android:textColor="#ffffff"
	    android:textSize="14dp"
	    android:typeface="sans"
	    android:padding="5dp"
	    android:gravity="center_horizontal|bottom"
	    android:background="@drawable/link">
	</Button>

	</LinearLayout>
</ScrollView>