<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000">
    
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/app_name"
		    android:textColor="#ffffff"
		    android:textSize="20dp"
		    android:textStyle="bold"
		    android:typeface="sans"
		    android:gravity="center_horizontal"
		    android:background="@drawable/titlebackground"
		    android:padding="5dp"
		    android:layout_marginBottom="10dp" />
    
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/blue"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/blueValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/green"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/greenValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/lightblue"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/lightblueValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/orange"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/orangeValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/pink"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/pinkValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/purple"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/purpleValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/red"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/redValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/yellow"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/yellowValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/white"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/whiteValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/black"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/blackValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp">
				<ImageView
					android:layout_marginRight="10dp"
					android:layout_height="50dp"
					android:src="@drawable/gray"
					android:layout_width="50dp">
				</ImageView>
				<EditText
					android:id="@+id/grayValue"
					android:inputType="numberDecimal"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:hint="@string/value" />
		</LinearLayout>
		
		
		
		<Button
			android:text="@string/saveValues"
			android:id="@+id/btnSaveValues"
			android:background="@drawable/button"
			android:layout_width="fill_parent"
			android:textSize="20dp"
		    android:textStyle="bold"
		    android:typeface="sans"
		    android:textColor="#ffffff"
			android:layout_height="50dp"
			android:layout_margin="10dp">
		</Button>
		
	

		<Button  
		android:id="@+id/btnWebsite"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/websiteURL"
	    android:textColor="#ffffff"
	    android:textSize="14dp"
	    android:typeface="sans"
	    android:padding="5dp"
	    android:gravity="center_horizontal|bottom"
	    android:background="@drawable/link">
	</Button>

	</LinearLayout>
</ScrollView>